# pyproject.toml
[project]
name = "comfyui-easy-pony"
authors = [
    {name = "Regi E",email = "regi@bynine.io"}
]
description = "Simple node to assits with prompting for Pony models"
version = "1.2.2"

license = { file = "LICENSE" }
dependencies  = []

[project.urls]
Repository = "https://github.com/regiellis/ComfyUI-EasyPony"

[tool.comfy]
PublisherId = "itsjustregi"
DisplayName = "Easy Pony"
Icon = "" 
